--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   $(function(){
 
     $("#txt").typed({
-      strings: ["Chúc Mừng Sinh Nhật Nguyễn Khánh Linh ( 24-09-2018 )" ,"Chúc Linh có một sinh nhật thật vui vẻ,hạnh phúc bên gia đình (và người iu?)!","Chúc Linh gặp nhiều thành công trong cuộc sống !","Năm cuối cấp 3 cố gắng nha","Hãy làm những gì mình thích và thích những điều mình làm ! :v","Mình luôn mong có thể gặp được Linh ở ngoài thực tế hơn là ngồi nhắn tin với nhau qua điện thoại :v", "À, nếu có ý định đi du học Hàn Quốc thì cứ đi nhaaa, Hiếu luôn đợi và chào đón Linh sang bên đó :v","Love you ♥","Best Wishes For You ♥ !"],
+      strings: ["Chúc Mừng Sinh Nhật Nguyễn Khánh Linh ( 24-09-2018 )" ,"Chúc Linh có một sinh thật vui vẻ,hạnh phúc bên gia đình (và người iu?)!","Chúc Linh gặp nhiều thành công trong cuộc sống !","Năm cuối cấp 3 cố gắng nha","Hãy làm những gì mình thích và thích những điều mình làm ! :v","Mình luôn mong có thể gặp được Linh ở ngoài thực tế hơn là ngồi nhắn tin với nhau qua điện thoại :v", "À, nếu có ý định đi du học Hàn Quốc thì cứ đi nhaaa, Hiếu luôn đợi và chào đón Linh sang bên đó :v","Love you ♥","Best Wishes For You ♥ !"],
       typeSpeed: 35,
       smartBackspace: true
     });
